--- a/style/set.styl
+++ b/style/set.styl
@@ -6,6 +6,12 @@ font-face( "ticket", "/media/font/ticketing", normal );
    to
       transform: rotate( 180deg )
 
+@keyframes spinTranslate
+   from
+      transform: rotate( 0 ) translate( -50%, -50% )
+   to
+      transform: rotate( 180deg ) translate( -50%, -50% )
+
 a
    color: inherit
    text-decoration: none
