fix splash display on MS Edge

--- a/style/breakpoint/default/splash.styl
+++ b/style/breakpoint/default/splash.styl
@@ -25,9 +25,11 @@ header
 
 .splash
    height: 100vh
+   left: 0
    position: fixed
+   top: 0
    width: 100%
-   z-index: 1
+   z-index: 20
 
    .logo
       display: block
