--- a/page/view/credits.jade
+++ b/page/view/credits.jade
@@ -1,12 +1,17 @@
 div.screen-content
   h1( title="Movienow!" ).screen-title Movienow!
 
-  dl.credits-list
-    dt Developer
-    dd
+  div.credits-list
+    h2.credit A Progressive Web App by
+    p.entry
       a( href="https://twitter.com/enwin" ) Thomas Beduneau / @enwin
-    dt Art director
-    dd
+
+    h2.credit Art director
+    p.entry
       a( href="http://www.sylvainweiss.fr" ) Sylvain Weiss
+
+    h2.credit Special thanks to
+    p.entry
+      a( href="http://www.switch-company.com" ) Switch
 
   p.theend FIN
