--- a/style/breakpoint/default/component-credits.styl
+++ b/style/breakpoint/default/component-credits.styl
@@ -13,11 +13,11 @@
       text-align: center
       padding-bottom: 50vh
 
-      dt
+      .credit
          font-size: rem( 14 )
-      dd
-         margin: rem( 4 ) 0 rem( 20 )
+      .entry
+         margin: rem( 4 ) 0 rem( 24 )
 
    .theend
-      text-align: center
       padding-bottom: 50vh
+      text-align: center
