update credits page

--- a/page/view/credits.jade
+++ b/page/view/credits.jade
@@ -14,4 +14,17 @@ div.screen-content
     p.entry
       a( href="http://www.switch-company.com" ) Switch
 
+    h2.credit Made with
+    ul.entries
+      li.entry HTML
+      li.entry CSS
+      li.entry JavaScript
+
+    p.info Offline capabilities provided by the Service Workers API
+
+    h2.credit Version
+    p.entry!= config.version
+
+    p.disclaimer This proof of concept was solely created to use the Service Workers API and demonstrate that nice applications can be made using Web technologies
+
   p.theend FIN
