--- a/style/breakpoint/default/component-credits.styl
+++ b/style/breakpoint/default/component-credits.styl
@@ -5,7 +5,7 @@
       background: none
 
    .screen-content
-      padding-top: 85vh
+      padding-top: 35vh
       background-color: $dark
       color: $light
 
@@ -15,8 +15,19 @@
 
       .credit
          font-size: rem( 14 )
+         text-transform: capitalize
+
       .entry
+      .entries
          margin: rem( 4 ) 0 rem( 24 )
+
+   .entries
+      .entry
+         display: inline-block
+         margin: 0
+
+   .disclaimer
+      font-size: rem( 13 )
 
    .theend
       padding-bottom: 50vh
