--- a/page/view/theater.jade
+++ b/page/view/theater.jade
@@ -1,7 +1,7 @@
 header.screen-header
   h1( title=name ).screen-title!= name
 
-  div.theater-favorite( class=favorited ? 'favorited' : null )
+  div.theater-favorite( class=favorite ? 'favorited' : null )
     button.button.button-favorite( type="button" )
       include ../../_source/svg/icon_favorites.svg
       span Add #{name} to favorites
