update fav icon on favorite list

--- a/style/breakpoint/default/component-favorites.styl
+++ b/style/breakpoint/default/component-favorites.styl
@@ -9,9 +9,8 @@
    .button-favorite
       height: rem( 54 )
       left: rem( -20 )
-      margin-top: rem( -54/2 )
       position: absolute
-      top: 50%
+      top: rem( -1 )
       width: rem( 60 )
 
    .message-block
