update credit page

--- a/page/view/credits.jade
+++ b/page/view/credits.jade
@@ -1,5 +1,4 @@
 div.screen-content
-  h1( title="Movienow!" ).screen-title Movienow!
 
   div.credits-list
     h2.credit A Progressive Web App by
@@ -16,8 +15,8 @@ div.screen-content
 
     h2.credit Made with
     ul.entries
-      li.entry HTML
-      li.entry CSS
+      li.entry HTML,
+      li.entry CSS,
       li.entry JavaScript
 
     p.info Offline capabilities provided by the Service Workers API
@@ -25,6 +24,6 @@ div.screen-content
     h2.credit Version
     p.entry!= config.version
 
-    p.disclaimer This proof of concept was solely created to use the Service Workers API and demonstrate that nice applications can be made using Web technologies
+    p.disclaimer This proof of concept was solely created to use the Service Worker API and demonstrate that nice applications can be made using Web technologies
 
-  p.theend FIN
+  h1( title="Movienow!" ).theend.screen-title Movienow!
