--- a/style/breakpoint/default/component-credits.styl
+++ b/style/breakpoint/default/component-credits.styl
@@ -5,13 +5,15 @@
       background: none
 
    .screen-content
-      padding-top: 35vh
       background-color: $dark
       color: $light
+      padding-top: 40vh
 
    .credits-list
-      text-align: center
       padding-bottom: 50vh
+      margin: 0 auto
+      max-width: rem( 400 )
+      text-align: center
 
       .credit
          font-size: rem( 14 )
@@ -30,5 +32,7 @@
       font-size: rem( 13 )
 
    .theend
+      height: auto
+      line-height: 1
+      margin: 0
       padding-bottom: 50vh
-      text-align: center
