--- a/style/breakpoint/default/object-screen.styl
+++ b/style/breakpoint/default/object-screen.styl
@@ -44,6 +44,7 @@
       line-height: ( 48/16 )
       padding: 0 rem( 7 )
       position: relative
+      user-select: none
       width: 50%
 
       &:empty:before
