update movie info trailer display

--- a/page/view/movie.jade
+++ b/page/view/movie.jade
@@ -72,7 +72,7 @@ div.screen-content
           dt.movie-synopsis-title Synopsis
           dd.movie-synopsis!= description
         if trailer
-          dt Trailer
+          dt.movie-trailer-title Trailer
           dd
             figure.movie-trailer
               div
