--- a/style/breakpoint/default/object-message.styl
+++ b/style/breakpoint/default/object-message.styl
@@ -21,6 +21,10 @@
       top: 50%
       transform: translate( -50%, -50% )
 
+   .search
+      height: rem( 28 )
+      width: @height
+
 .message-title
    color: $dark
    font-size: rem( 18 )
