--- a/page/module/social.jade
+++ b/page/module/social.jade
@@ -1,4 +1,5 @@
-meta( name="twitter:card" content="summary")
+meta( name="twitter:card" content="summary_large_image")
+meta( name="twitter:creator" content="@enwin" )
 
 meta( name="twitter:site" property="og:site_name" content=title )
 
