--- a/page/module/social.jade
+++ b/page/module/social.jade
@@ -11,4 +11,4 @@ meta( name="twitter:image" property="og:image" content='https://movienow.enwin.i
 meta( name="twitter:url" property="og:url" content="https://movienow.enwin.io/" )
 
 meta( property="og:type" content="website" )
-meta( property="og:locale" content=country )
+meta( property="og:locale" content=locale )
