add facebook app_id

--- a/page/module/social.jade
+++ b/page/module/social.jade
@@ -12,3 +12,5 @@ meta( name="twitter:url" property="og:url" content="https://movienow.enwin.io/" 
 
 meta( property="og:type" content="website" )
 meta( property="og:locale" content=locale )
+
+meta( property="fb:app_id" content="1594046774220711" )
