--- a/style/breakpoint/default/component-home.styl
+++ b/style/breakpoint/default/component-home.styl
@@ -7,6 +7,7 @@
 
    .screen-content
       background: none
+      color: $light
       min-height: 0
       padding-top: 0
       position: fixed
@@ -14,6 +15,9 @@
       bottom: 0
       left: 0
       height: auto
+
+   .button-reverse
+      padding: 0 1em
 
 .home-poster
    display: block
