--- a/style/breakpoint/default/object-message.styl
+++ b/style/breakpoint/default/object-message.styl
@@ -2,10 +2,13 @@
    left: 0
    padding: 0 rem( 20 )
    position: fixed
-   top: 50%
+   top: 54%
    text-align: center
    transform: translateY( -50% )
    width: 100%
+
+   .button
+      margin-top: 2rem
 
 .message-icon
    position: relative
@@ -28,8 +31,8 @@
 .message-title
    color: $dark
    font-size: rem( 18 )
-   margin: rem( 10 ) 0 rem( -6 )
-   text-transform: uppercase
+   margin: rem( 10 ) 0 rem( 0 )
 
 .message-text
    margin: rem( 10 ) 0
+
