--- a/page/view/error.jade
+++ b/page/view/error.jade
@@ -1,3 +1,3 @@
 div.layer-wrapper
   p#errorMessage.message!= message || 'Houston, we have a problem'
-  button.button.errorDone( type="buton" aria-controls="errorDialog" )!= message ? 'Ok' : 'Roger that'
+  button.button.button-cta.errorDone( type="buton" aria-controls="errorDialog" )!= message ? 'Ok' : 'Roger that'
