--- a/style/breakpoint/default/object-button.styl
+++ b/style/breakpoint/default/object-button.styl
@@ -46,11 +46,22 @@
 
 .button-reverse
    //border-radius: rem( 22 )
-   border: 2px solid $light
-   color: $light
+   border: 2px solid currentColor
+   color: currentColor
    display: block
    font-size: rem( 15 )
    height: rem( 44 )
    line-height: ( 38/14 )
    margin: rem( 16 ) auto
-   width: rem( 228 )
+   max-width: rem( 228 )
+   padding: 0 rem( 40 )
+
+.button-cta
+   padding: rem( 10 )
+
+   &:after
+      background-color: currentColor
+      content: ''
+      display: block
+      height: 1px
+      margin: 1px auto 0
