--- a/style/breakpoint/default/component-layer-location.styl
+++ b/style/breakpoint/default/component-layer-location.styl
@@ -4,6 +4,12 @@
       padding-left: rem( 14 )
       padding-right: @padding-left
 
+   .layer-description
+      display: none
+
+   &.setup .layer-description
+      display: block
+
    .button-location
       display: block
       height: rem( 48 )
