--- a/style/breakpoint/default/object-dialog.styl
+++ b/style/breakpoint/default/object-dialog.styl
@@ -35,6 +35,10 @@
       font-size: rem( 18 )
       margin: rem( 10 ) 0 rem( 15 )
 
+   .layer-description
+      font-size: rem( 15 )
+      text-align: center
+
 .layer-wrapper
    -webkit-overflow-scrolling: touch
    background-color: $color-secondary-dark
