--- a/page/view/theater.jade
+++ b/page/view/theater.jade
@@ -24,13 +24,13 @@ div.screen-content
             include ../../_source/svg/pattern.svg
 
             article.movie
-              a.movie-artwork( href="/movies/#{movie.id}" )
+              a.movie-artwork( href="/movies/#{movie.id}?tab=movie-info" )
                 figure
                   span.movie-artwork-wrapper
                     img( src="/media/poster/#{movie.id}" )
               div.movie-infos
                 h1.movie-title
-                  a( href="/movies/#{movie.id}" )!= movie.name
+                  a( href="/movies/#{movie.id}?tab=movie-info" )!= movie.name
 
                 if movie.infos
                   ul.movie-infos-list
