--- a/page/view/credits.jade
+++ b/page/view/credits.jade
@@ -3,7 +3,7 @@ div.screen-content
   div.credits-list
     h2.credit A Progressive Web App by
     p.entry
-      a( href="https://twitter.com/enwin" ) Thomas Beduneau / @enwin
+      a( href="https://twitter.com/enwin" ) Thomas Beduneau
 
     h2.credit Art director
     p.entry
@@ -23,6 +23,8 @@ div.screen-content
 
     h2.credit Version
     p.entry!= config.version
+
+    p.info Code available on GitHub at #[a( href="https://github.com/enwin/movienow" ) enwin/movienow]
 
     p.disclaimer This proof of concept was solely created to use the Service Worker API and demonstrate that nice applications can be made using Web technologies
 
