first draft of city map

--- a/page/module/script.jade
+++ b/page/module/script.jade
@@ -1,6 +1,6 @@
-script.
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register( '/sw.js' );
-  }
+//- script.
+//-   if ('serviceWorker' in navigator) {
+//-     navigator.serviceWorker.register( '/sw.js' );
+//-   }
 
 script( src="/app.js" )
