basic tracking implementation

--- a/page/module/script.jade
+++ b/page/module/script.jade
@@ -4,3 +4,15 @@ script.
   }
 
 script( src="/app.js" )
+
+script.
+  var _paq = _paq || [];
+  _paq.push(["setDomains", ["*.movienow.enwin.io"]]);
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    _paq.push(['setTrackerUrl', '#{config.trackerUrl}']);
+    _paq.push(['setSiteId', 1]);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+  })();
