--- a/page/module/script.jade
+++ b/page/module/script.jade
@@ -11,7 +11,8 @@ script.
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    _paq.push(['setTrackerUrl', '#{config.trackerUrl}']);
+    var u = "#{config.trackerUrl}"
+    _paq.push(['setTrackerUrl', u+'piwik.php']);
     _paq.push(['setSiteId', 1]);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
     g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
