fix id multiplication for ticket line pattern

--- a/page/layout/default.jade
+++ b/page/layout/default.jade
@@ -58,6 +58,7 @@ html( class="no-js intro" lang=lang )
 
   body( class=pageType )
     //- div#fb-root
+    include ../../_source/svg/defs.svg
 
     block header
       include ../module/header
