--- a/page/module/layer-location.jade
+++ b/page/module/layer-location.jade
@@ -5,7 +5,7 @@ section#locationDialog.layer.layer-location( role="dialog" aria-labelledby="dial
     p.layer-description I'm gonna need your location before showing what you want
 
     span.dash-wrapper( aria-hidden="true" )
-      include ../../_source/svg/pattern.svg
+      include ../../_source/svg/line.svg
 
     button.button.button-location( type="button" )
       include ../../_source/svg/icon_geolocation.svg
