--- a/page/view/movie.jade
+++ b/page/view/movie.jade
@@ -13,7 +13,7 @@ div.screen-content
       ul.theater-movies-list
         each theater in theaters
           li.theater-movies-item
-            include ../../_source/svg/pattern.svg
+            include ../../_source/svg/line.svg
             article.movie
               div.movie-infos
                 h1.movie-title
