--- a/page/view/theater.jade
+++ b/page/view/theater.jade
@@ -21,7 +21,7 @@ div.screen-content
       ul.theater-movies-list
         each movie in movies
           li.theater-movies-item
-            include ../../_source/svg/pattern.svg
+            include ../../_source/svg/line.svg
 
             article.movie
               a.movie-artwork( href="/movies/#{movie.id}?tab=movie-info" )
