--- a/style/set.styl
+++ b/style/set.styl
@@ -31,11 +31,17 @@ body
 .hidden
    hide();
 
+.defs
+   display: block
+   height: 0
+   width: 0
+
+.ticket-line
+   stroke: rgba( $color-primary-light, 0.4 )
+   stroke-width: 2px
+
 .dash
    display: block
    height: rem( 2 )
    width: 100%
 
-   pattern
-      stroke: rgba( $color-primary-light, 0.4 )
-      stroke-width: 2px
