change piwik script call

--- a/page/module/script.jade
+++ b/page/module/script.jade
@@ -13,7 +13,8 @@ script.
   (function() {
     var u = "#{config.trackerUrl}"
     _paq.push(['setTrackerUrl', u+'piwik.php']);
+    _paq.push(['setAPIUrl', u]);
     _paq.push(['setSiteId', 1]);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'js/index.php'; s.parentNode.insertBefore(g,s);
   })();
