add theater address on movie screen

--- a/style/breakpoint/default/component-theater.styl
+++ b/style/breakpoint/default/component-theater.styl
@@ -81,6 +81,9 @@
    font-size: rem( 18 )
    margin-top: rem( -2 )
 
+   small
+      font-size: rem( 14 )
+
 .movie-infos
    display: inline-block
    font-size: 1rem
