--- a/page/view/movie.jade
+++ b/page/view/movie.jade
@@ -17,7 +17,12 @@ div.screen-content
             article.movie
               div.movie-infos
                 h1.movie-title
-                  a( href="/theaters/#{theater.id}" )!= theater.name
+                  a( href="/theaters/#{theater.id}" )
+                    != theater.name
+                    if theater.address
+                      br
+                      - var address = theater.address.split( ', ' );
+                      small #{address[0]}, #{address[1]}
 
                 if theater.infos
                   ul.movie-infos-list
