add theater address on around me results

--- a/page/view/around-list.jade
+++ b/page/view/around-list.jade
@@ -2,8 +2,13 @@ if theaters
   div.screen-panel( role="tabpanel" id="around-0" aria-hidden='false' )
     ul.item-list
       each theater in theaters
-        li.theater-item
-          a.item-title( href="/theaters/#{theater.id}" )!= theater.name
+        unless !theater.id
+          li.theater-item
+            a.item-title( href="/theaters/#{theater.id}" )
+              != theater.name
+              if theater.address
+                br
+                small!= theater.address
 if movies
   div.screen-panel( role="tabpanel" id="around-1" aria-hidden='true' )
     ul.item-list
