--- a/style/breakpoint/default/object-screen.styl
+++ b/style/breakpoint/default/object-screen.styl
@@ -123,6 +123,9 @@
       display: block
       color: $text-secondary-dark
 
+      small
+         font-size: rem( 14 )
+
 // .screen-around
 //    .screen-content
 //       padding-top: rem( 150 )
