--- a/page/view/movies-list.jade
+++ b/page/view/movies-list.jade
@@ -2,4 +2,4 @@ if movies
   ul.item-list
     each movie in movies
       li.movie-item
-        a.item-title( href="/movies/#{movie.id}" )!= movie.name
+        a.item-title( href="/movies/#{movie.id}" )!= movie.title
