--- a/page/view/around-list.jade
+++ b/page/view/around-list.jade
@@ -8,7 +8,7 @@ if theaters
               != theater.name
               if theater.address
                 br
-                small #{theater.address.street}, #{theater.address.zip} #{theater.address.city}
+                small #{theater.address}
 if movies
   div.screen-panel( role="tabpanel" id="around-1" aria-hidden='true' )
     ul.item-list
