--- a/page/view/theater.jade
+++ b/page/view/theater.jade
@@ -70,7 +70,7 @@ div.screen-content
       dl.info-desc.info-theater
         if address
           dt Address
-          dd #{address.street}, #{address.zip} #{address.city}
+          dd #{address}
         if phone
           dt Phone
           dd!= phone
