--- a/page/view/theaters-list.jade
+++ b/page/view/theaters-list.jade
@@ -7,4 +7,5 @@ if theaters
             != theater.name
             if theater.address
               br
-              small #{theater.address.street}, #{theater.address.zip} #{theater.address.city}
+              //- small #{theater.address.street}, #{theater.address.zip} #{theater.address.city}
+              small #{theater.address}
