--- a/style/breakpoint/default/component-home.styl
+++ b/style/breakpoint/default/component-home.styl
@@ -37,6 +37,13 @@
       transform: translate( -50%, -50% )
       width: 100%
 
+   a
+      display: block
+      height: 100%
+      position: absolute
+      width: 100%
+      z-index: 1
+
    &.show
       opacity: 1
 
