--- a/page/module/layer-location.jade
+++ b/page/module/layer-location.jade
@@ -1,8 +1,8 @@
-section#locationDialog.layer.layer-location( role="dialog" aria-labelledby="dialogLocationTitle" aria-hidden="true" )
+section#locationDialog.layer.layer-location( role="dialog" aria-labelledby="dialogLocationTitle" aria-describedby="dialogLocationDesc" aria-hidden="true" )
   div.layer-wrapper
     h1#dialogLocationTitle.layer-title( data-title="Change location" data-polite="Set your location" ) Change location
 
-    p.layer-description I'm gonna need your location before showing what you want
+    p#dialogLocationDesc.layer-description I'm gonna need your location before showing what you want
 
     span.dash-wrapper( aria-hidden="true" )
       include ../../_source/svg/line.svg
